# ChiptuneMIDI

./: .gitattributes  .gitmodules  README.md  chiptune.c  chiptune.h  chiptune_channel_controller_internal.c  chiptune_channel_controller_internal.h  chiptune_common_internal.c  chiptune_common_internal.h  chiptune_config_internal.h  chiptune_envelope_internal.c  chiptune_envelope_internal.h  chiptune_event_internal.c  chiptune_event_internal.h  chiptune_midi_control_change_internal.c  chiptune_midi_control_change_internal.h  chiptune_midi_define.h  chiptune_midi_define_internal.h  chiptune_midi_effect_internal.c  chiptune_midi_effect_internal.h  chiptune_midi_note_internal.c  chiptune_midi_note_internal.h  chiptune_oscillator_internal.c  chiptune_oscillator_internal.h  chiptune_printf_internal.c  chiptune_printf_internal.h  chiptune_version_internal.h
mid_reader/: mid_reader.c  mid_reader.h
mid_reader/qt/: MidSong.cpp  MidSong.h
mid_reader/test/: CMakeLists.txt  batch_run_mid_reader_test.py  main.cpp
qt/: 8bit(bpm185)v0727T1.mid  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerPrivate.cpp  AudioPlayerPrivate.h  AudioPlayerPrivateQt5.cpp  AudioPlayerPrivateQt5.h  AudioPlayerPrivateQt6.cpp  AudioPlayerPrivateQt6.h  CMakeLists.txt  ChannelListWidget.cpp  ChannelListWidget.h  ChannelListWidgetForm.ui  ChannelNodeWidget.cpp  ChannelNodeWidget.h  ChannelNodeWidgetForm.ui  ChiptuneMIDI.pro  ChiptuneMIDI.rc  ChiptuneMidiValues.cpp  ChiptuneMidiValues.h  ChiptuneMidiWidget.cpp  ChiptuneMidiWidget.h  ChiptuneMidiWidgetForm.ui  GetInstrumentNameString.cpp  GetInstrumentNameString.h  InstrumentTimbreIniFile.cpp  InstrumentTimbreIniFile.h  MelodicTimbreFrame.cpp  MelodicTimbreFrame.h  MelodicTimbreFrameForm.ui  Midi2Chiptune.pro  MidiPlayer.h  MidiPlayerThread.h  PitchTimbreFrame.cpp  PitchTimbreFrame.h  PitchTimbreFrameForm.ui  ProgressSlider.cpp  ProgressSlider.h  SequencerWidget.cpp  SequencerWidget.h  (+7 more)
qt/midi_out/: CMakeLists.txt  ChiptuneMidiOut.cpp  ChiptuneMidiOut.h
qt/midi_out/example/: CMakeLists.txt  main.cpp
qt/midi_out/example/qt5_qmake_project/: ChiptuneMidiOutExample.pro
qt/midi_out/qt5_qmake_project/: ChiptuneMidiOut.pro
qt/module_tests/InstrumentTimbreIniFile/: CMakeLists.txt  main.cpp
qt/player/: CMakeLists.txt  ChannelNodeWidget.h  ChiptuneMIDIPlayer.rc  ChiptuneMidiPlayerWidget.cpp  ChiptuneMidiPlayerWidget.h  ChiptuneMidiPlayerWidgetForm.ui  ChiptuneMidiWidgetForm.ui  MidSongManager.cpp  MidSongManager.h  PlayerChannelNodeWidget.cpp  PlayerChannelNodeWidget.h  PlayerChannelNodeWidgetForm.ui  PlayerSequencerWidget.cpp  PlayerSequencerWidget.h  SequencerWidget.cpp  SequencerWidget.h  main.cpp
qt/player/qt5_qmake_project/: ChiptuneMIDI.pro
qt/qt5/: CMakeLists.txt  ChiptuneMIDI.pro
qt/qt5_qmake_project/: ChiptuneMIDI.pro
qt/synthesizer/: CMakeLists.txt  ChiptuneMIDISynthesizer.rc  ChiptuneMidiSynthesizerWidget.cpp  ChiptuneMidiSynthesizerWidget.h  ChiptuneMidiSynthesizerWidgetForm.ui  MidiInputManager.cpp  MidiInputManager.h  SynthesizerChannelNodeWidget.cpp  SynthesizerChannelNodeWidget.h  SynthesizerChannelNodeWidgetForm.ui  SynthesizerSequencerWidget.cpp  SynthesizerSequencerWidget.h  main.cpp
qt/synthesizer/qt5_qmake_project/: ChiptuneMIDISynthesizer.pro
